# gp_map

./: CMakeLists.txt  README.md  package.xml
config/: 3D.rviz  3D_cabinet.rviz  3D_teddy.rviz  gp_map.rviz  simulation.rviz
include/: InformationFilterOccupancyMap.h  SymPersymMat.h  markerarray_pub.h  nx_map_utils.h  owens.hpp
launch/: accuracy.launch  mapping_3d.launch  play_tum_bag.launch
param/: cabinet.yaml  large_cabinet.yaml  simulation.yaml  teddy.yaml
src/: accuracy.py  key_wait.cpp  run_ifom.cpp
